# euler-solutions

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
python/: __main__.py  benchmark.py  f.py  helper.py  problem_1.py  problem_12.py  problem_13.py  problem_14.py  problem_15.py  problem_16.py  problem_18.py  problem_2.py  problem_20.py  problem_22.py  problem_3.py  problem_36.py  problem_42.py  problem_44.py  problem_52.py  problem_55.py  problem_6.py  problem_67.py  problem_8.py  pyproject.toml  typeshack.py
python/tools/: __init__.py  benchmark.py  colorize.py  helper.py  typeshack.py
solutions/: __init__.py  __main__.py  problem_1.py  problem_10.py  problem_100.py  problem_11.py  problem_12.py  problem_13.py  problem_14.py  problem_15.py  problem_16.py  problem_17.py  problem_18.py  problem_19.py  problem_2.py  problem_20.py  problem_21.py  problem_22.py  problem_23.py  problem_24.py  problem_25.py  problem_26.py  problem_27.py  problem_28.py  problem_29.py  problem_3.py  problem_30.py  problem_31.py  problem_32.py  problem_33.py  problem_34.py  problem_35.py  problem_36.py  problem_37.py  problem_38.py  problem_39.py  problem_4.py  problem_40.py  problem_41.py  problem_42.py  (+62 more)
src/: __main__.py  benchmark.py  problem_1.py  problem_16.py  problem_2.py  problem_20.py  problem_42.py  problem_44.py  problem_55.py  problem_6.py
